--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,31 @@
         </div>
     </div>
 
+    <!-- ***********form validation************ -->
+
+    <div class=" container Form_valid">
+        <form id="myform" method="POST">
+            <label for="fname">Enter First Name:</label>
+            <input type="text" name="fname" id="first_name" value=""> <br>
+            <div id="error1"></div> <br><br>
+            <label for="lname">Enter Last Name:</label>
+            <input type="text" name="lname" id="last_name" value=""> <br>
+            <div id="error2"></div> <br><br>
+            <label for="mail">Enter Your Email:</label>
+            <input type="email" name="mail" id="mail" value=""> <br>
+            <div id="error3"></div> <br><br>
+            <label for="pass">Enter Your password:</label>
+            <input type="password" name="pass" id="password" value="">
+            <div id="error4"></div> <br><br>
+            <textarea name="text" id="msg" cols="50" rows="14"></textarea> <br> <br>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+
+
+
+    
+
 
 
 
@@ -132,8 +157,9 @@
         </div>
     </footer>
 
-    <script src="contactquery.js"></script>
-    <script src="contact.js"></script>
+    <script src="js/script.js"></script>
+
+    
 
 </body>
 
